--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react-icons": "^3.0.0",
     "@types/three": "^0.171.0",
     "class-variance-authority": "^0.7.1",
